--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise Music</title>
+    <title>Little Paradise | About</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -45,22 +45,21 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
+                        <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
+                        <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
+                        <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud"></i></a>
+                        <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <!-- End of navbar -->
     </header>
 
     <h1 class="appear-first">About</h1>
@@ -68,8 +67,8 @@
     <section class="container appear-second" id="about-section">
         <div class="row">
             <div class="col-lg-7">
-                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid about-image">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid disappear about-image"> 
+                <img src="assets/images/littleparadisesign.jpg" alt="Little Paradise BS3 road sign" class="img-fluid about-image">
+                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid disappear about-image"> 
             </div>
             <div class="col-lg-5">
                 <article>
@@ -104,32 +103,30 @@
                 </article>
             </div>       
             <div class="col d-lg-none d-md-block">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid about-image">   
+                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid about-image">   
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="page-footer">
         <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
+                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                 </li>
             </ul>
         </div>
     </footer>
-    <!-- End of footer + page -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
