--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise Music</title>
+    <title>Little Paradise | Contact</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -45,16 +45,16 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
+                        <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
+                        <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
+                        <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud"></i></a>
+                        <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
             <div class="col-md-10 col-lg-8 text-center contact-info cta">
                 <div class="contact-content cta-content">
                     <div id="enquiries">
-                        <h2>General Enquiries <i class="fas fa-question-circle"></i></h2>
+                        <h2>General Enquiries <i class="fas fa-question-circle" aria-hidden="true"></i><span class="sr-only">Question Mark</span></h2>
                         <p class="text-wrap">littleparadise.bri@gmail.com</p>
                     </div>
                     <hr>
@@ -91,7 +91,7 @@
 
     <section class="container appear-second cta max-width-reduce" id="email-form">
         <form method="post" action="#">
-            <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text"></i></h3>
+            <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text" aria-hidden="true"></i><span class="sr-only">Envelope</span></h3>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" name="name" required>
@@ -111,16 +111,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
+                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                 </li>
             </ul>
         </div>
