--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise Music</title>
+    <title>Little Paradise | Gallery</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -44,17 +44,16 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
+                        <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
+                        <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
+                        <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i
-                                class="fab fa-soundcloud"></i></a>
+                        <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
@@ -66,78 +65,78 @@
     <section id="gallery" class="container-fluid appear-second">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/korg2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg2.jpg" alt="Microkorg keyboard" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
+                <img src="assets/images/franguitar.jpg" alt="Red Epiphone dot guitar" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/lpstudio.jpg" alt="" class="img-fluid">
+                <img src="assets/images/lpstudio.jpg" alt="Microphone and pop filter" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/picks.jpg" alt="" class="img-fluid">
+                <img src="assets/images/picks.jpg" alt="Guitar plectrums arranged in a circle on top of a turntable" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
+                <img src="assets/images/littleparadisesign.jpg" alt="Little Paradise BS3 road sign" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
+                <img src="assets/images/youownme.jpg" alt="Lyric book" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mikeguitar2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mikeguitar2.jpg" alt="Ibanez guitar propped up against a guitar amp" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/lpstudio5.jpg" alt="" class="img-fluid">
+                <img src="assets/images/lpstudio5.jpg" alt="Microkorg, guitar amp, and Ibanez guitar" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/boss3.jpg" alt="" class="img-fluid">
+                <img src="assets/images/boss3.jpg" alt="Boss guitar amp, front facing" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/boss4.jpg" alt="" class="img-fluid">
+                <img src="assets/images/boss4.jpg" alt="Guitar amp effect nobs" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/korg.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg.jpg" alt="Microkorg from above" class="img-fluid">
             </div>
 
 
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/lpstudio2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/lpstudio2.jpg" alt="Recording studio with epiphone dot guitar" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike3.jpg" alt="Mike recording guitar in the studio" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mikeguitar.jpg" alt="Ibanez guitar attached to the wall" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike1.jpg" alt="Mike playing guitar in a rehearsal room standing up" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
+                <img src="assets/images/guitarpedals.jpg" alt="Boss ME-50 effects pedal" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike2.jpg" alt="Mike playing guitar on a bed" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike4.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike4.jpg" alt="Mike playing guitar in a rehearsal room sitting down" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/fran4.jpg" alt="" class="img-fluid">
+                <img src="assets/images/fran4.jpg" alt="Fran sat down in the recording studio" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike5.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike5.jpg" alt="Mike setting up equipment in a rehearsal room" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/korg3.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg3.jpg" alt="Microkorg keyboard" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike6.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mike6.jpg" alt="Mike carrying a guitar" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mikeguitar3.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mikeguitar3.jpg" alt="Ibanez guitar propped against a guitar amp" class="img-fluid">
             </div>
         </div>
     </section>
@@ -147,16 +146,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
+                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                 </li>
             </ul>
         </div>
