--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise Music</title>
+    <title>Little Paradise | Bristol's best new rock band</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -19,8 +19,7 @@
 <body>
 
     <header>
-        <!-- Navbar -->
-
+        
         <nav class="navbar navbar-light navbar-expand-md fixed-top appear-second">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
 
@@ -49,23 +48,21 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
+                        <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
+                        <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
+                        <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link" rel="external"><i
-                                class="fab fa-soundcloud"></i></a>
+                        <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <!-- End of navbar -->
     </header>
 
     <section class="appear-first container-fluid">
@@ -84,7 +81,7 @@
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
-                    <h2>DEBUT EP <i class="fas fa-compact-disc"></i></h2>
+                    <h2>DEBUT EP <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
                     <a class="btn btn-primary btn-lg" href="http://www.oddsocksband.bandcamp.com/" role="button"
                         target="_blank" rel="external">Buy Now</a>
                 </div>
@@ -94,7 +91,7 @@
 
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
-                    <h2>SIGN UP <i class="fas fa-envelope-open-text"></i></h2>
+                    <h2>SIGN UP <i class="fas fa-envelope-open-text" aria-hidden="true"><span class="sr-only">Envelope</span></i></h2>
                     <a class="btn btn-primary btn-lg" href="contact.html#email-form" role="button">Join</a>
                 </div>
             </div>
@@ -124,7 +121,7 @@
         <div class="row music-alert">
             <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
-                    <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up"></i></h5>
+                    <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
                     <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
             </div>
             <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
@@ -194,16 +191,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
+                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                 </li>
             </ul>
         </div>
