--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise Music</title>
+    <title>Little Paradise | Music</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -45,17 +45,16 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i></a>
+                        <a href="http://www.facebook.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i></a>
+                        <a href="http://www.youtube.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i><span class="sr-only">Youtube</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i></a>
+                        <a href="http://www.instagram.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" rel="external" class="nav-link"><i
-                                class="fab fa-soundcloud"></i></a>
+                        <a href="http://www.soundcloud.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i><span class="sr-only">Soundcloud</span></a>
                     </li>
                 </ul>
             </div>
@@ -66,8 +65,7 @@
     <h1 class="appear-first">Music</h1>
 
     <section class="music-content appear-second">
-        <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i
-                    class="fab fa-soundcloud" id="soundcloud-logo"></i></a></h2>
+        <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2 d-none d-lg-block"></div>
@@ -83,8 +81,7 @@
     </section>
 
     <section class="music-content appear-second">
-        <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"
-                    id="youtube-logo"></i></a></h2>
+        <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-1 col-lg-2 d-none d-sm-block"></div>
@@ -97,7 +94,7 @@
     </section>
 
     <section class="container music-content appear-second" id="release-section">
-        <h2 class="music-heading">Releases <i class="fas fa-compact-disc"></i></h2>
+        <h2 class="music-heading">Releases <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
         <div class="row">
 
             <div class="col-12">
@@ -107,7 +104,7 @@
                     <div class="card-body">
                         <h3 class="text-center">Little Paradise EP</h3>
                         <p class="card-text text-center">(2021)</p>
-                        <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="#" role="button">Buy
+                        <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocks.bandcamp.com/" role="button">Buy
                             Now</a>
                     </div>
                 </div>
@@ -122,16 +119,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
+                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
+                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                 </li>
             </ul>
         </div>
