--- a/music.html
+++ b/music.html
@@ -64,33 +64,28 @@
 
     <h1 class="appear-first">Music</h1>
 
-    <section class="music-content appear-second">
+    <section class="music-content appear-second container">
         <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
-        <div class="container-fluid">
+        
             <div class="row">
-                <div class="col-lg-2 d-none d-lg-block"></div>
-                <div class="col-sm-2 col-lg-2 d-none d-sm-block" id="soundcloud-section"></div>
-                <div class="col-sm-8 col-lg-6 iframe">
+                <div class="col-lg-2 col-xl-1"></div>
+                <div class="col-lg-8 col-xl-10">
                     <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
                 </div>
-                <div class="col-lg-2 d-none d-lg-block"></div>
+                <div class="col-lg-2 col-xl-1"></div>
             </div>  
-        </div>
     </section>
 
-    <section class="music-content appear-second">
+    <section class="music-content appear-second container">
         <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
-        <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-1 col-lg-2 d-none d-sm-block"></div>
-                <div class="col-sm-10 col-lg-6 iframe"><iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8"><iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 <p>Your device does not support iframes</p></iframe></div>
-                <div class="col-sm-1 col-lg-2 d-none d-sm-block" id="youtube-section"></div>
-                <div class="col-lg-2 d-none d-lg-block"></div>
+                <div class="col-lg-2"></div>
             </div>
-        </div>
     </section>
 
     <section class="container music-content appear-second" id="release-section">
